# r-splunk

./: .gitignore  QWEN.md  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
.github/workflows/: ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: app_code.rs  main.rs  network.rs
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
src/components/: charts.tsx  file-actions.tsx  layout.tsx  log-filters.tsx  log-stats.tsx  network-sources.tsx  query-builder.tsx  search-bar.tsx  sidebar.tsx  ui.tsx  virtual-log-table.tsx
src/hooks/: use-log-actions.ts
src/lib/: log-utils.ts  tauri.ts
src/store/: index.ts
src/test/: store.test.ts  tauri-helpers.test.ts
