[package]
name = "r-splunk"
version = "0.1.0"
description = "Privacy-First Desktop Log Analyzer"
authors = []
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tantivy = "0.22"
regex = "1.0"
chrono = "0.4"
tokio-rustls = "0.26.4"
rustls-pki-types = { version = "1.14", features = ["alloc"] }
rcgen = "0.14.7"
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
